samples/_failures_safe/1761513919_99b40b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f36e5eca.c: In function ‘tokenize’:
./samples/SAFE/__tmp_f36e5eca.c:199:9: error: expected expression at end of input
  199 |         tokens[token_count++] =
      |         ^~~~~~
./samples/SAFE/__tmp_f36e5eca.c:199:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f36e5eca.c:199:9: error: expected declaration or statement at end of input
